# share-data

./: CMakeLists.txt  README.md
include/: share_data.h  share_data_index_def.h
src/: share_data.c
